--- a/Main.html
+++ b/Main.html
@@ -14,6 +14,7 @@
 	<script src="MenuScene.js"></script>
 	<script src="GameScene.js"></script>
 	<script src="PauseScene.js"></script>
+	<script src="OptionsScene.js"></script>
 </body>
 
 </html>
