--- a/Main.html
+++ b/Main.html
@@ -7,8 +7,8 @@
 </head>
 
 <body onload=main()>
+	<script src="Button.js"></script>
 	<script src="Main.js"></script>
-	<script src="Game.js"></script>
 	<script src="SceneManager.js"></script>
 	<script src="Scene.js"></script>
 	<script src="MenuScene.js"></script>
