Attempt at fixing

--- a/Main.html
+++ b/Main.html
@@ -9,14 +9,14 @@
 <body onload=main()>
 	<script src="Button.js"></script>
 	<script src="Main.js"></script>
-	<script src="Game/Game.js"></script>
-	<script src="Game/Player.js"></script>
-	<script src="Scenes/SceneManager.js"></script>
-	<script src="Scenes/Scene.js"></script>
-	<script src="Scenes/MenuScene.js"></script>
-	<script src="Scenes/GameScene.js"></script>
-	<script src="Scenes/PauseScene.js"></script>
-	<script src="Scenes/OptionsScene.js"></script>
+	<script src="Game.js"></script>
+	<script src="Player.js"></script>
+	<script src="SceneManager.js"></script>
+	<script src="Scene.js"></script>
+	<script src="MenuScene.js"></script>
+	<script src="GameScene.js"></script>
+	<script src="PauseScene.js"></script>
+	<script src="OptionsScene.js"></script>
 </body>
 
 </html>
